--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pyyaml = "^6.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.4.0"
+colorlog = "^6.7.0"
 
 [tool.isort]
 multi_line_output = 5
