--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ psycopg2 = "^2.9.7"
 django-filter = "^23.2"
 django-split-settings = "^1.2.0"
 pyyaml = "^6.0.1"
+pynacl = "^1.5.0"
+pydantic = "^1.10.7"
 
 
 [tool.poetry.group.dev.dependencies]
