--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,10 @@ django-split-settings = "^1.2.0"
 pyyaml = "^6.0.1"
 pynacl = "^1.5.0"
 pydantic = "^1.10.7"
+pytest = "^7.4.1"
+pytest-xdist = "^3.3.1"
+pytest-django = "^4.5.2"
+model-bakery = "^1.15.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -25,6 +29,13 @@ colorlog = "^6.7.0"
 [tool.isort]
 multi_line_output = 5
 line_length = 119
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "core.project.settings"
+django_find_project = false
+python_files = "test_*.py"
+testpaths = ["core"]
+filterwarnings = "ignore::DeprecationWarning:^(?!node\\.).*:" # optional
 
 [build-system]
 requires = ["poetry-core"]
